# diplomacy-docs-examples

./: .gitignore  README.md  data_generator.py  main.py  pyproject.toml  rlm_backend.py  rlm_chatroom_backend.py
docs/: guide.md  tinker-grpo-curriculum.md
environments/: __init__.py  full_press.py  tool_accuracy.py
notebooks/: tinker_grpo_modal.py
scripts/: run_openrouter_rollout.py  train_tinker_grpo_curriculum.py
tests/: conftest.py  test_live_rollout_backends.py  test_notebook_helpers.py  test_operator_surfaces.py  test_rollout_backends.py  test_sampling_ref_and_cli.py  test_train_hooks.py
tinker_training/: __init__.py  curriculum.py  diplomacy_adapter.py  notebook_helpers.py  rollout_backends.py
