[project]
name = "diplomacy-docs-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.0.0",
    "diplomacy==1.1.2",
    "marimo",
    "modal>=1.3.1",
    "openai>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "tinker>=0.9.0",
    "tinker_cookbook[wandb,verifiers]",
    "verifiers>=0.1.9,<0.1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
tinker_cookbook = { path = "vendor/tinker-cookbook", editable = true }
